--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="" class="silex-runtime"><head>
+<!doctype html><html class="silex-runtime" lang=""><head>
     <meta charset="UTF-8">
     <!-- generator meta tag -->
     <!-- leave this for stats and Silex version check -->
@@ -37,8 +37,7 @@
 
     
     <div data-silex-type="container-element" class="container-element editable-style silex-id-1474394621033-3 section-element" style="">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element website-width" style=""><div data-silex-type="html-element" class="editable-style silex-id-1561020553543-0 html-element" style=""><div class="silex-element-content"><embed src="https://drive.google.com/viewerng/
-viewer?embedded=true&amp;url=https://github.com/ceubri/excellence-kebab/assets/pdf/menu.pdf" width="500" height="375"></div></div></div>
+        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element website-width" style=""><div data-silex-type="html-element" class="editable-style silex-id-1561020553543-0 html-element" style=""><div class="silex-element-content"><embed src="https://drive.google.com/viewerng/viewer?embedded=true&amp;url=https://ceubri.github.io/excellence-kebab/assets/pdf/Menu.pdf" width="100%" height="900"></div></div></div>
     </div>
     
 
