--- a/editable.html
+++ b/editable.html
@@ -37,7 +37,7 @@
 
     
     <div data-silex-type="container-element" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element prevent-resizable" data-silex-id="silex-id-1474394621033-3" style="">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1474394621032-2" style=""><div data-silex-type="html-element" class="editable-style silex-id-1561020553543-0 html-element" data-silex-id="silex-id-1561020553543-0" style=""><div class="silex-element-content"><embed src="assets/pdf/Menu.pdf" width="100%" height="900" internalinstanceid="27"></div></div></div>
+        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1474394621032-2" style=""><div data-silex-type="html-element" class="editable-style silex-id-1561020553543-0 html-element" data-silex-id="silex-id-1561020553543-0" style=""><div class="silex-element-content"><embed src="https://drive.google.com/viewerng/viewer?embedded=true&amp;url=http://excellence-kebab.fr/assets/pdf/Menu.pdf" width="100%" height="900"></div></div></div>
     </div>
     
 
