--- a/editable.html
+++ b/editable.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://preprod.silex.me/static/2.10/normalize.css" data-silex-static="">
     <link rel="stylesheet" href="https://preprod.silex.me/static/2.10/front-end.css" data-silex-static="">
 
-    <style type="text/css" class="silex-style">.html-element {width: 100%;}</style>
+    <style type="text/css" class="silex-style"></style>
     <script type="text/javascript" class="silex-script"></script>
     <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,255,1);}.silex-id-1474394621033-3 {top: 5px; left: 0px;}.silex-id-1474394621032-2 {min-height: 622px; background-color: transparent;}.silex-id-1561020553543-0 {width: 1539.010498046875px; min-height: 903px; background-color: rgb(255, 255, 255); top: 0px; left: -71px;}</style>
     <title>excellence kebab à Seichamps </title>
@@ -37,7 +37,7 @@
 
     
     <div data-silex-type="container-element" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element prevent-resizable" data-silex-id="silex-id-1474394621033-3" style="">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1474394621032-2" style=""><div data-silex-type="html-element" class="editable-style silex-id-1561020553543-0 html-element" data-silex-id="silex-id-1561020553543-0" style=""><div class="silex-element-content"><embed src="https://drive.google.com/viewerng/viewer?embedded=true&amp;url=http://excellence-kebab.fr/assets/pdf/Menu.pdf" width="100%" height="900"></div></div></div>
+        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 silex-container-content container-element prevent-draggable website-width" data-silex-id="silex-id-1474394621032-2" style=""><div data-silex-type="html-element" class="editable-style silex-id-1561020553543-0 html-element" data-silex-id="silex-id-1561020553543-0" style=""><div class="silex-element-content"><embed src="https://drive.google.com/viewerng/viewer?embedded=true&amp;url=http://excellence-kebab.fr/assets/pdf/Menu.pdf" width="100%" height="1080px"></div></div></div>
     </div>
     
 
