--- a/editable.html
+++ b/editable.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://preprod.silex.me/static/2.10/normalize.css" data-silex-static="">
     <link rel="stylesheet" href="https://preprod.silex.me/static/2.10/front-end.css" data-silex-static="">
 
-    <style type="text/css" class="silex-style">.body-initial {background-color: rgba(246,226,185,1);}</style>
+    <style type="text/css" class="silex-style">.body-initial {background-color: rgba(246, 226, 185, 1) !important;}</style>
     <script type="text/javascript" class="silex-script"></script>
     <style class="silex-inline-styles" type="text/css">.body-initial {background-color: rgba(255,255,255,1);}.silex-id-1474394621033-3 {top: 5px; left: 0px; background-color: transparent;}.silex-id-1474394621032-2 {min-height: 622px; background-color: transparent;}.silex-id-1561020553543-0 {width: 1539px; min-height: 1083px; background-color: rgb(255, 255, 255); top: 0px; left: -71px;}</style>
     <title>excellence kebab Seichamps </title>
