--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                 <div class="silex-element-content normal">
                     <h3>tél. : 09 54 41 90 29</h3>
                 </div>
-            </div><div data-silex-type="text-element" class="editable-style silex-id-1563375715832-24 text-element silex-component prevent-resizable hide-on-desktop hamburger-menu style-hamburger-menu" style=""><div class="silex-element-content normal"><style>.hamburger-menu_1623097667281_516 {position: absolute; z-index: 20;}.silex-editor .hamburger-menu_1623097667281_516 nav {left: -9999px;}.hamburger-menu_1623097667281_516 nav ul {margin-top: 80px;}.hamburger-menu_1623097667281_516 nav {opacity: 0; position: absolute; background-color: #ededed; transition: left 1s ease, height 0s ease 1s; left: -300px; width: 300px; height: 20px;}.hamburger-menu_1623097667281_516.open nav {opacity: 1; height: 100vh; left: 0; transition: left 1s ease, height 0s ease 0s;}.hamburger-menu_1623097667281_516 .nav-container {z-index: 10; position: absolute;}.hamburger-menu_1623097667281_516.open .nav-container {}.hamburger-menu_1623097667281_516 .hamburger-btn {z-index: 20; cursor: pointer; position: absolute;}.hamburger-menu_1623097667281_516 .hamburger-btn span {display: block; width: 30px; height: 5px; margin-bottom: 3px; position: relative; background-color: #4c4c4c; border: 1px solid #ffffff; border-radius: 3px; transition: border-color 0.1s ease-in,
+            </div><div data-silex-type="text-element" class="editable-style silex-id-1563375715832-24 text-element silex-component prevent-resizable hide-on-desktop hamburger-menu style-hamburger-menu" style=""><div class="silex-element-content normal"><style>.hamburger-menu_1623166587120_641 {position: absolute; z-index: 20;}.silex-editor .hamburger-menu_1623166587120_641 nav {left: -9999px;}.hamburger-menu_1623166587120_641 nav ul {margin-top: 80px;}.hamburger-menu_1623166587120_641 nav {opacity: 0; position: absolute; background-color: #ededed; transition: left 1s ease, height 0s ease 1s; left: -300px; width: 300px; height: 20px;}.hamburger-menu_1623166587120_641.open nav {opacity: 1; height: 100vh; left: 0; transition: left 1s ease, height 0s ease 0s;}.hamburger-menu_1623166587120_641 .nav-container {z-index: 10; position: absolute;}.hamburger-menu_1623166587120_641.open .nav-container {}.hamburger-menu_1623166587120_641 .hamburger-btn {z-index: 20; cursor: pointer; position: absolute;}.hamburger-menu_1623166587120_641 .hamburger-btn span {display: block; width: 30px; height: 5px; margin-bottom: 3px; position: relative; background-color: #4c4c4c; border: 1px solid #ffffff; border-radius: 3px; transition: border-color 0.1s ease-in,
       opacity 0.1s ease-in,
       transform 0.1s ease-in,
-      background 0.1s ease-in;}.hamburger-menu_1623097667281_516.open .hamburger-btn span {border-color: rgba(255, 255, 255, 0);}.hamburger-menu_1623097667281_516 .hamburger-btn span:first-child {transform-origin: 4px -2px;}.hamburger-menu_1623097667281_516.open .hamburger-btn span:first-child {transform: rotate(45deg) translate(7px, -4px);}.hamburger-menu_1623097667281_516.open .hamburger-btn span:nth-last-child(2) {opacity: 0;}.hamburger-menu_1623097667281_516 .hamburger-btn span:nth-child(3) {transform-origin: -11px 4px;}.hamburger-menu_1623097667281_516.open .hamburger-btn span:nth-child(3) {transform: rotate(-45deg) translate(0, 12px);}</style>
+      background 0.1s ease-in;}.hamburger-menu_1623166587120_641.open .hamburger-btn span {border-color: rgba(255, 255, 255, 0);}.hamburger-menu_1623166587120_641 .hamburger-btn span:first-child {transform-origin: 4px -2px;}.hamburger-menu_1623166587120_641.open .hamburger-btn span:first-child {transform: rotate(45deg) translate(7px, -4px);}.hamburger-menu_1623166587120_641.open .hamburger-btn span:nth-last-child(2) {opacity: 0;}.hamburger-menu_1623166587120_641 .hamburger-btn span:nth-child(3) {transform-origin: -11px 4px;}.hamburger-menu_1623166587120_641.open .hamburger-btn span:nth-child(3) {transform: rotate(-45deg) translate(0, 12px);}</style>
 <!-- inspired by https://codepen.io/erikterwan/pen/EVzeRP -->
-<div class="hamburger-menu_1623097667281_516 closed">
+<div class="hamburger-menu_1623166587120_641 closed">
     <div class="hamburger-btn fixed">
       <span></span>
       <span></span>
@@ -143,26 +143,26 @@
   var isOpen = false;
   function close() {
     isOpen = false;
-    $('.hamburger-menu_1623097667281_516').removeClass('open');
-    $('.hamburger-menu_1623097667281_516').addClass('closed');
+    $('.hamburger-menu_1623166587120_641').removeClass('open');
+    $('.hamburger-menu_1623166587120_641').addClass('closed');
   }
   function open() {
     isOpen = true;
-    $('.hamburger-menu_1623097667281_516').addClass('open');
-    $('.hamburger-menu_1623097667281_516').removeClass('closed');
+    $('.hamburger-menu_1623166587120_641').addClass('open');
+    $('.hamburger-menu_1623166587120_641').removeClass('closed');
   }
   function toggle() {
     if(isOpen) close();
     else open();
   }
-  var silexElement = $('.hamburger-menu_1623097667281_516').closest('.editable-style');
+  var silexElement = $('.hamburger-menu_1623166587120_641').closest('.editable-style');
   function move(data) {
     var offset = silexElement.offset();
-    $('.hamburger-menu_1623097667281_516 .nav-container').css({
+    $('.hamburger-menu_1623166587120_641 .nav-container').css({
       'transform': 'translate(' + (data.scrollLeft - (offset.left/data.scale)) + 'px, ' + (data.scrollTop - (offset.top/data.scale)) + 'px)'
     });
   }
-  $('.hamburger-menu_1623097667281_516 .hamburger-btn').click(function() { toggle(); });
+  $('.hamburger-menu_1623166587120_641 .hamburger-btn').click(function() { toggle(); });
   $(document).on('silex.scroll silex.resize', function(e) {
     close();
     move(window.silex);
@@ -254,9 +254,9 @@
                 <div class="silex-element-content normal">
                     <h3>Horaires
                     </h3>
-                    <p>Du mardi au jeudi......................11h30 - 13h30 et 18h - 21h30<br>Vendredi &amp; samedi......................11h30 - 13h30 et 18h - 21h30<br>Dimanche......................18h - 21h30<br>Lundi
+                    <p>Mardi, jeudi, vendredi, samedi.................11h30 - 13h30 et 18h - 21h30<br>Dimanche......................18h - 21h00<br> Mercredi
 
-...................... repos ;)</p>
+..........................11h30 à 13h30 </p>
                 </div>
             </div></div>
     </section><section data-silex-type="container-element" class="container-element editable-style section-element prevent-resizable silex-id-1561390935171-144" style="">
